--- a/css/site.css
+++ b/css/site.css
@@ -26,7 +26,7 @@ main>.container {
 
 .minHeight{
     min-height: 80vh;
-} */
+} 
 
 html,
 body {
@@ -34,12 +34,20 @@ body {
     color: #212121;
     height: 100%;
     min-height: 100%;
+} */
+
+main>.container{
+    padding: 60px 15px 0;
 }
+
+main>.container-fluid{
+    padding-top: 60px;
+} 
 
 body>main {
     /* margin to account for nav bar */
-    margin-top: 70px;
-    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-bottom: 60px;
 }
 
 .homeText {
